--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   image_picker: ^0.6.7+12
   select_form_field: "^1.0.1"
   flutter_masked_text: ^0.8.0
+  carousel_slider: ^2.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
