--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   carousel_slider: ^2.3.1
   provider: ^4.3.2+2
 
+  my_place_models:
+    path: ../my_place_models
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
