--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,12 @@ dependencies:
   carousel_slider: ^2.3.1
   provider: ^4.3.2+2
   rating_dialog: ^1.0.0
+  oktoast: ^2.3.2
 
   my_place_models:
     path: ../my_place_models
+  my_place_utils:
+    path: ../my_place_utils
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
